--- a/app/views/index.html
+++ b/app/views/index.html
@@ -3,6 +3,7 @@
     <head>
         <link rel="stylesheet" href="../../../stylesheets/normalize.css">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto+Condensed:300italic,700italic,700,300">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Edu+TAS+Beginner:wght@400;500;600&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="../../../stylesheets/lib.css">
         <link rel="stylesheet" type="text/css" href="../../../stylesheets/app.css">
         <title>Finstagram</title>
