--- a/public/stylesheets/app.css
+++ b/public/stylesheets/app.css
@@ -5,6 +5,7 @@ header {
 
 body {
     background-color: whitesmoke;
+    font-family: 'EDU TAS Beginner', sans-serif;
 }
 
 main {
@@ -18,4 +19,10 @@ main {
 
 .finstagram-post .user-info img {
     border-radius: 50%;
+}
+a.photo{
+    transition: padding 0.5s;
+}
+a.photo:hover{
+    padding: 10px
 }
