--- a/app/views/login.erb
+++ b/app/views/login.erb
@@ -1,4 +1,6 @@
-<form action="/login" method="POST">
+<%= @error_message if @error_message %>
+
+<form method="POST" action="/login">
     <div class="form-group">
         <label for="username">Username</label>
         <input type="text" id="username" name="username">
@@ -8,7 +10,7 @@
     <input type="password" id="password" name="password">
   </div>
   <div class="form-group">
-    <button class="button" type="submit">Signup</button>
+    <button class="button" type="submit">Login</button>
   </div>
 
 </form>
