--- a/app/views/finstagram_posts/new.erb
+++ b/app/views/finstagram_posts/new.erb
@@ -1,9 +1,12 @@
 <h2>New Post</h2>
+
 <ul class="errors">
   <% @finstagram_post.errors.full_messages.each do |message| %>
     <li><%= message %></li>
   <% end %>
 </ul>
+
+<img id="preview" src="" alt="" style="display:none; max-width: 200px;">
 
 <form action="/finstagram_posts" method="POST">
   <div class="form-group">
@@ -14,3 +17,29 @@
     <button class="button" type="submit">Post</button>
   </div>
 </form>
+
+<script>
+  // Listen and wait for the DOM to load
+  document.addEventListener("DOMContentLoaded", function() {
+
+    // Store elements as variables
+    var photoUrlElm = document.getElementById("photo_url");
+    var previewElm = document.getElementById("preview");
+
+    // Listen and wait for the cursor to exit the input
+    photoUrlElm.addEventListener("blur", function(event) {
+      // Store the input text as a variable 
+      var url = event.target.value;
+
+      if(url) {
+        // Set the img src attribute to the input's text
+        previewElm.setAttribute("src", url);
+        // Display the img
+        previewElm.style.display = "block";
+      } else {
+        // Hide the img
+        previewElm.style.display = "none";
+      }
+    });
+  });
+</script>
