--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -7,6 +7,7 @@
     <link rel="stylesheet" type="text/css" href="/stylesheets/lib.css">
     <link rel="stylesheet" type="text/css" href="/stylesheets/app.css">
     <title>Finstagram</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
   <body>
   <header>
