--- a/public/stylesheets/app.css
+++ b/public/stylesheets/app.css
@@ -26,3 +26,42 @@ a.photo{
 a.photo:hover{
     padding: 10px
 }
+
+/* 
+  Media Queries go on the bottom 
+
+  Desktop-first: max-widths in DESC
+  Mobile-first: min-widths in ASC
+*/
+
+@media screen and (max-width: 768px) {
+    main {
+      width: 70%;
+    }
+  
+    .user-info h2 {
+      font-size: 1.3em;
+    }
+  
+    .user-info h3 {
+      font-size: 1.1em;
+    }
+  }
+  
+  @media screen and (max-width: 480px) {
+    main {
+      width: 100%;
+    }
+  
+    .user-info h2 {
+      font-size: 1.25em;
+    }
+  
+    .user-info h3 {
+      font-size: 0.9em;
+    }
+  
+    .actions {
+      font-size: 0.8em;
+    }
+  }
